<resources>
    <string name="app_name">Reactions</string>
    <string name="enjoyed">We hope you\'ve enjoyed playing so far, please rate this game 5* if you enjoy!</string>
    <string name="failed_load">Could not open the Play Store, please install the Play Store app.</string>
    <string name="sign_in_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failure">Unable to sign in.</string>
    <string name="game_finished_high_score">New high score!\nYou scored</string>
    <string name="game_finished_low_score">Game over!\nYou scored</string>
    <string name="game_finished_play_again">Play again?</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="not_yet">Not yet</string>
    <string name="never">Never</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="website">Rate App</string>
    <string name="high_scores">High Scores</string>
    <string name="new_game_short">New Game Short</string>
    <string name="new_game_long">New Game Long</string>
    <string name="game_board">The game board area</string>
    <string name="score">Score:</string>
    <string name="score_cd">Your score</string>
    <string name="time">Time:</string>
    <string name="result">Image to state if you\'ve beaten the high score or not</string>
    <string name="ten_seconds">Ten Seconds</string>
    <string name="fifteen_seconds">Fifteen Seconds</string>
    <string name="leaderboard">Leaderboard:</string>
    <string name="countdown">Countdown before game starts</string>
    <string name="achievements">Achievements</string>
    <string name="hangman"><u>Download Hangman</u></string>
</resources>
