<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layoutMainMain"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.gfaiers.reactions.MainActivity"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto">
    <com.google.android.gms.ads.AdView android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button android:id="@+id/buttonMainNewGameShort"
            android:text="@string/new_game_short"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <Button android:id="@+id/buttonMainNewGameLong"
            android:text="@string/new_game_long"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <Button android:id="@+id/buttonMainHighScores"
            android:text="@string/high_scores"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <Button android:id="@+id/buttonMainWebsite"
            android:text="@string/website"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAllCaps="false"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>
</RelativeLayout>
