<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.gfaiers.reactions.HighScoresActivity"
    android:background="@color/color_background"
    android:orientation="vertical">
    <com.google.android.gms.ads.AdView android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_below="@+id/adViewBanner">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/high_scores"
            android:textColor="@color/color_text"
            android:textSize="@dimen/text_size_title"
            android:textAlignment="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ten_seconds"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size"
                android:textAlignment="textEnd"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView android:id="@+id/textViewHighScoresTen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size"
                android:textAlignment="textStart"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/fifteen_seconds"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size"
                android:textAlignment="textEnd"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"/>
            <TextView android:id="@+id/textViewHighScoresFifteen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/color_text"
                android:textSize="@dimen/text_size"
                android:textAlignment="textStart"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:textColor="@color/color_text"
        android:textSize="@dimen/text_size"
        android:textAlignment="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_above="@+id/layoutHighScoresLeaderBoards"/>
    <LinearLayout android:id="@+id/layoutHighScoresLeaderBoards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button android:id="@+id/buttonHighScoresTen"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_seconds"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"
                android:background="@drawable/left_bar_button_background"
                android:textColor="@color/color_text"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <Button android:id="@+id/buttonHighScoresFifteen"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifteen_seconds"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size"
                android:background="@drawable/right_bar_button_background"
                android:textColor="@color/color_text"
                android:layout_weight="1"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <Button android:id="@+id/buttonHighScoresAchievements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/achievements"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:textColor="@color/color_text"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_gravity="center"/>
        <Button android:id="@+id/buttonHighScoresBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"
            android:background="@drawable/button_background"
            android:textColor="@color/color_text"
            android:layout_gravity="center"/>
    </LinearLayout>

</RelativeLayout>
