<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_background">

    <com.google.android.gms.ads.AdView android:id="@+id/adViewBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        android:layout_alignParentTop="true"/>

    <LinearLayout android:id="@+id/layoutHUD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/adViewBanner">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:text="@string/time"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:background="@color/color_background"
            android:textColor="@color/color_text"
            android:paddingLeft="@dimen/text_view_padding"
            android:paddingStart="@dimen/text_view_padding"
            android:paddingRight="@dimen/text_view_padding"
            android:paddingEnd="@dimen/text_view_padding"/>
        <TextView android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:background="@color/color_background"
            android:textColor="@color/color_text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:text="@string/score"
            android:textAlignment="textEnd"
            android:layout_weight="1"
            android:background="@color/color_background"
            android:textColor="@color/color_text"
            android:paddingLeft="@dimen/text_view_padding"
            android:paddingStart="@dimen/text_view_padding"
            android:paddingRight="@dimen/text_view_padding"
            android:paddingEnd="@dimen/text_view_padding"/>
        <TextView android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:layout_weight="1"
            android:background="@color/color_background"
            android:textColor="@color/color_text"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/layoutGameBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/layoutHUD"
        android:weightSum="5">
        <LinearLayout android:id="@+id/layoutRow1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton android:id="@+id/imageButton1"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:src="@drawable/zero_blue"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"/>
            <ImageButton android:id="@+id/imageButton2"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton3"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton4"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton5"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

        </LinearLayout>
        <LinearLayout android:id="@+id/layoutRow2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton android:id="@+id/imageButton6"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton7"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton8"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton9"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton10"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/layoutRow3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton android:id="@+id/imageButton11"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton12"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton13"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton14"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton15"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/layoutRow4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton android:id="@+id/imageButton16"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton17"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton18"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton19"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton20"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/layoutRow5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ImageButton android:id="@+id/imageButton21"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton22"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton23"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton24"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>

            <ImageButton android:id="@+id/imageButton25"
                android:contentDescription="@string/game_board"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="fill_horizontal"
                android:background="@color/color_background"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:padding="2dp"
                android:src="@drawable/zero_blue"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView android:id="@+id/imageViewCountDown"
        android:contentDescription="@string/countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"/>

</RelativeLayout>
